clusters/cluster/apps/neuland-app/neuland-api-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuland-api-prod
  namespace: neuland-app
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: neuland-api-prod
  template:
    metadata:
      labels:
        app: neuland-api-prod
    spec:
      containers:
      - name: neuland-api-prod
        image: ghcr.io/neuland-ingolstadt/neuland.app-backend:main-154 # {"$imagepolicy": "flux-system:neuland-api-prod"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 146Mi
