clusters/cluster/apps/neuland-app/neuland-api-prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuland-api-prod
  namespace: neuland-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - api.neuland.app
    secretName: neuland-app-tls
  rules:
  - host: api.neuland.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neuland-api-prod
            port:
              number: 4000
